--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Sushmitha-94.github.io/sorting",
   "name": "sorting_visualizer",
   "version": "0.1.0",
   "private": true,
